[package]
name = "tile_clerk"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "tile_clerk_lib"

[[bin]]
path = "src/main.rs"
name = "tile_clerk"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
image = { version = "0.24", default-features = false, features = [
  "jpeg",
  "png",
] }

