[package]
name = "tile_clerk"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "tile_clerk_lib"

[[bin]]
path = "src/main.rs"
name = "tile_clerk"

[dependencies]
base64 = "0.21.4"
base64-serde = "0.7.0"
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
image = { version = "0.24", default-features = false, features = [
  "jpeg",
  "png",
] }
rfd = "0.12.0"
serde = "1.0.188"
serde_json = "1.0.107"

